--- a/themes/hugo-theme-lean-launch-page/layouts/index.html
+++ b/themes/hugo-theme-lean-launch-page/layouts/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="/assets/main.css" />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
 	{{ template "_internal/google_analytics.html" . }}
