--- a/themes/hugo-theme-lean-launch-page/static/assets/main.css
+++ b/themes/hugo-theme-lean-launch-page/static/assets/main.css
@@ -19,7 +19,7 @@ body{
 	height: 100%;
 	text-align: center;
 	font-size: 1.3rem;
-	font-family: "Open Sans";
+	font-family: "Roboto";
 }
 	.logo{
 		float: left;
@@ -36,14 +36,14 @@ body{
 	h1{
 		margin-top: 10%;
 		margin-bottom: 0;
-		color: #06385d;
-		font-family: "Nunito";
-		font-size: 3.4rem;
-		letter-spacing: 2px;
+		color: #000000;
+		font-family: "Roboto";
+		font-size: 5rem;
+		letter-spacing: -6px;
 		line-height: 1.0;
 	}
 		span.logo{
-			font-family: "Nunito";
+			font-family: "Roboto";
 		}
 
 	img{
@@ -80,7 +80,7 @@ body{
 
 			form input[type="submit"]{
 				background-color: #FFD700;
-				background-color: #8e132a;
+				background-color: #FFD700;
 				width: 20%;
 				color: white;
 				font-weight: bold;
@@ -120,8 +120,6 @@ body{
 		#benefits p{
 			padding-top: 10px;
 		}
-			p.benefit:first-child{
-			}
 
 
 
